1999-04-27  Linus Nordberg  <linus@swox.se>

	* Makefile (clean): Add target.

1999-04-27  Linus Nordberg  <linus.nordberg@canit.se>

	* spect.c: Include <unistd.h>.

	* findcl.c (main): Input is `m', not all factors of `m'.  Print
	only the very first matching multiplier.  Include <unistd.h>.
	Flush stdout.

	* spect.c: Move everything but main() to statlib.c.

	* findcl.c: New file.

	* gmpstat.h: New file.

	* statlib.c (merit, merit_u, f_floor, vz_dot, spectral_test): New
	functions.

1999-03-29  Linus Nordberg  <linus.nordberg@canit.se>

	* stat.c (f_freq): Don't print 2nd level results if doing 1st
	level.

	* gen.c (main): Set default algorithm to mpz_urandomb.
	(main): Add option -c.

1999-03-24  Linus Nordberg  <linus.nordberg@canit.se>

	* Makefile (GMPINC): Rename to GMPH.
	(GMPH):	Add gmp-mparam.h.
	(CFLAGS): Add -I$(GMPLIBDIR)/mpn

1999-03-16  Linus Nordberg  <linus.nordberg@canit.se>

	* statlib.c (ks_table): Use mpf_pow_ui() and exp().

	* gen.c: Include unistd.h for getopt.

1999-03-15  Linus Nordberg  <linus.nordberg@canit.se>

	* gen.c, stat.c, statlib.c, statlib.h: New files.
	* Makefile, ChangeLog: New files.
